--- a/app/views/Skip_Bo/rules.scala.html
+++ b/app/views/Skip_Bo/rules.scala.html
@@ -27,6 +27,11 @@
     <p>Der Spieler der zuerst alle Karten aus seinem Spielerstapel, auf Ablagestapel gelegt hat gewinnt das Spiel.</p>
 
 </div>
-
+<br>
+<center>
+    <button>
+        <a href="http://localhost:9000/board">Starte ein Spiel!</a>
+    </button>
+</center>
 </body>
 </html>
