--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,19 @@
 
 @main("HTWG Skip Bo") {
 
+<center>
+    <h1>Welcome to Skip Bo</h1>
+    <br>
+    <button>
+        <a href="http://localhost:9000/rules">Zu den Regeln</a>
+    </button>
+    <br>
+    <br>
+    <button>
+        <a href="http://localhost:9000/board">Starte ein Spiel!</a>
+    </button>
+</center>
 
-<h1>About Skip Bo</h1>
+
 
 }
