add: add css for rules and index

--- a/app/views/Skip_Bo/rules.scala.html
+++ b/app/views/Skip_Bo/rules.scala.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <title>Skip Bo</title>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/rules.css")">
+    <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/index.css")'>
 </head>
 <body>
 <div class="Body">
@@ -29,8 +29,8 @@
 </div>
 <br>
 <center>
-    <button>
-        <a href="http://localhost:9000/board">Starte ein Spiel!</a>
+    <button class="Button">
+        <a class="ButtonLink" href="http://localhost:9000/board">Starte ein Spiel!</a>
     </button>
 </center>
 </body>
