--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,17 +1,17 @@
 @()
 
 @main("HTWG Skip Bo") {
-
+<link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/index.css")' />
 <center>
     <h1>Welcome to Skip Bo</h1>
     <br>
-    <button>
-        <a href="http://localhost:9000/rules">Zu den Regeln</a>
+    <button class="Button">
+        <a class="ButtonLink" href="http://localhost:9000/rules">Zu den Regeln</a>
     </button>
     <br>
     <br>
-    <button>
-        <a href="http://localhost:9000/board">Starte ein Spiel!</a>
+    <button class="Button">
+        <a class="ButtonLink" href="http://localhost:9000/board">Starte ein Spiel!</a>
     </button>
 </center>
 
