--- a/public/stylesheets/board.css
+++ b/public/stylesheets/board.css
@@ -57,11 +57,13 @@ p {
 }
 
 .gameButton {
-    background-color: #808080;
+    border-width: 3px;
+    border-style: solid;
+    background-color: #6A93B0;
     padding: 10px;
     margin: 3px;
-    width: 325px;
-    height: 40px;
+    width: 400px;
+    height: 50px;
 }
 
 .gameTextInputs {
