--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,13 +11,51 @@
 <head>
     @* Here's where we render the page title `String`. *@
     <title>@title</title>
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-    <script src="@routes.Assets.versioned("javascript/hello.js")" type="text/javascript"></script>
-
+    <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.css")'>
+    <link rel="shortcut icon" type="image/png" href='@routes.Assets.versioned("images/favicon.png")'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
-@* And here's where we render the `Html` object containing
-* the page content. *@
+
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <a href='#' class="navbar-brand mb-0 h1">
+        <img
+                src='@routes.Assets.versioned("images/SkipBo.png")'
+                class="d-inline-block align-top"
+                width="100"  height="50" />
+    </a>
+    <button class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse"
+         id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a href="http://localhost:9000/" class="nav-link">
+                    Home
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a href="http://localhost:9000/board" class="nav-link">
+                    Game
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a href="http://localhost:9000/rules" class="nav-link">
+                    Rules
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
 @content
+<script src='@routes.Assets.versioned("javascripts/main.js")' type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@@5.2.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
