--- a/app/views/Skip_Bo/board.scala.html
+++ b/app/views/Skip_Bo/board.scala.html
@@ -33,118 +33,149 @@
 
 
 @main("HTWG Skip Bo") {
-    <header class="header">
-        <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/board.css")' />
-        @if(playerName == "A"){
-            <div class="player">
-                <img class="playerIcon" id="playerAIcon" src='@routes.Assets.versioned("images/PlayerA.png")'>
-                <br>
-                <label for="playerAIcon">Player A</label>
-            </div>
-        } else {
-        <div class="player">
-            <img  class="playerIcon" id="playerBIcon" src='@routes.Assets.versioned("images/PlayerB.png")'>
-            <br>
-            <label for="playerBIcon">Player B</label>
-        </div>
-        }
-    </header>
-    <div class="gamecontainer">
-        <center>
-                    <div class="gameState">
-                <div >@statusText</div>
-            </div>
-        <div class="board">
-            <div class="spielerStapel">
-                @if(controller.game.player.isEmpty){
+<header class="header">
+    <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/board.css")'/>
+    @if(playerName == "A"){
+    <div class="player">
+        <img class="playerIcon" id="playerAIcon" src='@routes.Assets.versioned("images/PlayerA.png")'>
+        <br>
+        <label for="playerAIcon">Player A</label>
+    </div>
+    } else {
+    <div class="player">
+        <img class="playerIcon" id="playerBIcon" src='@routes.Assets.versioned("images/PlayerB.png")'>
+        <br>
+        <label for="playerBIcon">Player B</label>
+    </div>
+    }
+</header>
+<div class="gamecontainer">
+    <div class="gameState">
+        <div>@statusText</div>
+    </div>
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="board col-6">
+            <div class="row">
+                <div class="boardgap col-2"></div>
+                <div class="spielerStapel col-8">
+                    @if(controller.game.player.isEmpty){
                     <p>Spielerstapel: | leer | - verbleibende Karten: 0</p>
-                } else {
-                    @if(!controller.game.player(controller.playerState.getPlayer).stack.isEmpty){
-                        <p>Spielerstapel: | @controller.game.player(controller.playerState.getPlayer).stack.head.toString | - verbleibende Karten: @controller.game.player(controller.playerState.getPlayer).stack.size.toString </p>
                     } else {
-                        <p>Spielerstapel: | leer | - verbleibende Karten: 0</p>
+                    @if(!controller.game.player(controller.playerState.getPlayer).stack.isEmpty){
+                    <p>Spielerstapel: | @controller.game.player(controller.playerState.getPlayer).stack.head.toString |
+                        -
+                        verbleibende Karten:
+                        @controller.game.player(controller.playerState.getPlayer).stack.size.toString </p>
+                    } else {
+                    <p>Spielerstapel: | leer | - verbleibende Karten: 0</p>
                     }
-                }
+                    }
+                </div>
+                <div class="boardgap col-2"></div>
             </div>
             <br><br>
-            <div class="hand">
+            <div class="row">
+                <div class="boardgap col-2"></div>
+            <div class="hand col-8">
                 @if(controller.game.player.isEmpty){
-                    <p>Handkarten: | 0 | | 0 | | 0 | | 0 | | 0 |</p>
+                <p>Handkarten: | 0 | | 0 | | 0 | | 0 | | 0 |</p>
                 } else {
-                    @if(handSize == 5){
-                        <p>Handkarten: | @firstHandCard |  | @secondHandCard |  | @thirdHandCard |  | @fourthHandCard |  | @fifthHandCard |</p>
-                    } else if(handSize == 4){
-                    <p>Handkarten: | @firstHandCard |  | @secondHandCard |  | @thirdHandCard |  | @fourthHandCard |</p>
-                    } else if(handSize == 3){
-                    <p>Handkarten: | @firstHandCard |  | @secondHandCard |  | @thirdHandCard |</p>
-                    } else if(handSize == 2){
-                    <p>Handkarten: | @firstHandCard |  | @secondHandCard |</p>
-                    } else if(handSize == 1){
-                    <p>Handkarten: | @firstHandCard |</p>
-                    }
+                @if(handSize == 5){
+                <p>Handkarten: | @firstHandCard | | @secondHandCard | | @thirdHandCard | | @fourthHandCard | |
+                    @fifthHandCard |</p>
+                } else if(handSize == 4){
+                <p>Handkarten: | @firstHandCard | | @secondHandCard | | @thirdHandCard | | @fourthHandCard |</p>
+                } else if(handSize == 3){
+                <p>Handkarten: | @firstHandCard | | @secondHandCard | | @thirdHandCard |</p>
+                } else if(handSize == 2){
+                <p>Handkarten: | @firstHandCard | | @secondHandCard |</p>
+                } else if(handSize == 1){
+                <p>Handkarten: | @firstHandCard |</p>
+                }
                 }
             </div>
+                <div class="boardgap col-2"></div>
+                </div>
             <br><br>
-            <div class="helpstacks">
-                @if(controller.game.player.isEmpty){
-                    <p>Hilfestapel: | leer |  | leer |  | leer |  | leer |</p>
-                } else  {
+            <div class="row">
+                <div class="boardgap col-2"></div>
+                <div class="helpstacks col-8">
+                    @if(controller.game.player.isEmpty){
+                    <p>Hilfestapel: | leer | | leer | | leer | | leer |</p>
+                    } else {
                     <p>Hilfestapel:</p>
                     @if(firstHelpStackSize == 0){
-                        <p>| leer |</p>
+                    <p>| leer |</p>
                     } else {
-                        <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(0).head.toString |</p>
+                    <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(0).head.toString |</p>
                     }
                     @if(secondHelpStackSize == 0){
-                        <p>| leer |</p>
+                    <p>| leer |</p>
                     } else {
-                        <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(1).head.toString |</p>
+                    <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(1).head.toString |</p>
                     }
                     @if(thirdHelpStackSize == 0){
-                        <p>| leer |</p>
+                    <p>| leer |</p>
                     } else {
-                        <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(2).head.toString |</p>
+                    <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(2).head.toString |</p>
                     }
                     @if(fourthHelpStackSize == 0){
-                        <p>| leer |</p>
+                    <p>| leer |</p>
                     } else {
-                        <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(3).head.toString |</p>
+                    <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(3).head.toString |</p>
                     }
 
 
-                }
+                    }
+                </div>
+                <div class="boardgap col-2"></div>
             </div>
             <br><br>
-            <div class="ablageStapel">
-                <p>Ablagestapel: | @firstAblageStapel |  | @secondAblageStapel |  | @thirdAblageStapel |  | @fourthAblageStapel |</p>
-            </div>
-        </div>
-        </center>
-        <h2>Aktionen:</h2>
-        <div class="gameButtonsDiv">
             <div class="row">
-                <div class="col-xl-3">
-                    <button class="gameButton" id="hand_Ablagestapel" onclick="hand_Ablagestapel_click()">Karte von Hand auf Ablagestapel</button>
+                <div class="boardgap col-2"></div>
+                <div class="ablageStapel col-8">
+                    <p>Ablagestapel: | @firstAblageStapel | | @secondAblageStapel | | @thirdAblageStapel | |
+                        @fourthAblageStapel |</p>
                 </div>
-                <div class="col-xl-3">
-                    <button class="gameButton" id="hand_Hilfestapel" onclick="hand_Hilfestapel_click()">Karte von Hand auf Hilfsstapel</button>
-                </div>
-                <div class="col-xl-3">
-                    <button class="gameButton" id="hilfestapel_Ablagestapel" onclick="hilfestapel_Ablagestapel_click()">Karte von Hilfestapel auf Ablagestapel</button>
-                </div>
-                <div class="col-xl-3">
-                    <button class="gameButton" id="spielerstapel_Ablagestapel" onclick="spielerstapel_Ablagestapel_click()">Karte vom Spielerstapel auf Ablagestapel</button>
-                </div>
+                <div class="boardgap col-2"></div>
             </div>
         </div>
-        <div class="gameTextInputs">
-            <label for="whichCard">Welche Karte(Index 1 -> 5): </label>
-            <input class="gameInput" type="text" id="whichCard">
-            <br>
-            <label for="whereCard">Wohin(Index 1 -> 5): </label>
-            <input class="gameInput" type="text" id="whereCard">
+        <div class="col-3"></div>
+    </div>
+    <h2>Aktionen:</h2>
+    <div class="gameButtonsDiv">
+        <div class="row">
+            <div class="col-xl-3">
+                <button class="gameButton" id="hand_Ablagestapel" onclick="hand_Ablagestapel_click()">Karte von Hand auf
+                    Ablagestapel
+                </button>
+            </div>
+            <div class="col-xl-3">
+                <button class="gameButton" id="hand_Hilfestapel" onclick="hand_Hilfestapel_click()">Karte von Hand auf
+                    Hilfsstapel
+                </button>
+            </div>
+            <div class="col-xl-3">
+                <button class="gameButton" id="hilfestapel_Ablagestapel" onclick="hilfestapel_Ablagestapel_click()">
+                    Karte von Hilfestapel auf Ablagestapel
+                </button>
+            </div>
+            <div class="col-xl-3">
+                <button class="gameButton" id="spielerstapel_Ablagestapel" onclick="spielerstapel_Ablagestapel_click()">
+                    Karte vom Spielerstapel auf Ablagestapel
+                </button>
+            </div>
         </div>
     </div>
+    <div class="gameTextInputs">
+        <label for="whichCard">Welche Karte(Index 1 -> 5): </label>
+        <input class="gameInput" type="text" id="whichCard">
+        <br>
+        <label for="whereCard">Wohin(Index 1 -> 5): </label>
+        <input class="gameInput" type="text" id="whereCard">
+    </div>
+</div>
 }
 <script>
     function hand_Ablagestapel_click()
@@ -167,4 +198,8 @@
         val whereCard = document.getElementbyId("whereCard").value.toInt - 1;
         controller.pushCardPlayer(whereCard, controller.palyerState.getPlayer);
     }
+
+
+
+
 </script>
