added JQuery Post Methods and JavaScript functions

--- a/app/views/Skip_Bo/board.scala.html
+++ b/app/views/Skip_Bo/board.scala.html
@@ -145,30 +145,26 @@
     </div>
     <h2>Aktionen:</h2>
     <div class="gameButtonsDiv">
-        <div class="row">
+        <div class="row" id="input-panel-group">
             <div class="col-xl-3">
-                <button class="gameButton" id="hand_Ablagestapel"
-                    onclick="hand_Ablagestapel_click(document.getElementById('whichCard').value, document.getElementById('whereCard').value)">Karte
+                <button class="gameButton" id="hand_Ablagestapel">Karte
                     von Hand auf
                     Ablagestapel
                 </button>
             </div>
             <div class="col-xl-3">
-                <button class="gameButton" id="hand_Hilfestapel"
-                    onclick="hand_Hilfestapel_click(document.getElementById('whichCard').value, document.getElementById('whereCard').value)">Karte
+                <button class="gameButton" id="hand_Hilfestapel">Karte
                     von Hand auf
                     Hilfsstapel
                 </button>
             </div>
             <div class="col-xl-3">
-                <button class="gameButton" id="hilfestapel_Ablagestapel"
-                    onclick="hilfestapel_Ablagestapel_click(document.getElementById('whichCard').value, document.getElementById('whereCard').value)">
+                <button class="gameButton" id="hilfestapel_Ablagestapel">
                     Karte von Hilfestapel auf Ablagestapel
                 </button>
             </div>
             <div class="col-xl-3">
-                <button class="gameButton" id="spielerstapel_Ablagestapel"
-                    onclick="spielerstapel_Ablagestapel_click(document.getElementById('whereCard').value)">
+                <button class="gameButton" id="spielerstapel_Ablagestapel">
                     Karte vom Spielerstapel auf Ablagestapel
                 </button>
             </div>
