--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,54 +8,55 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     @* Here's where we render the page title `String`. *@
     <title>@title</title>
     <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.css")'>
     <link rel="shortcut icon" type="image/png" href='@routes.Assets.versioned("images/favicon.png")'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous">
 </head>
+
 <body>
 
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-    <a href='#' class="navbar-brand mb-0 h1">
-        <img
-                src='@routes.Assets.versioned("images/SkipBo.png")'
-                class="d-inline-block align-top"
-                width="100"  height="50" />
-    </a>
-    <button class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse"
-         id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a href="http://localhost:9000/" class="nav-link">
-                    Home
-                </a>
-            </li>
-            <li class="nav-item active">
-                <a href="http://localhost:9000/board" class="nav-link">
-                    Game
-                </a>
-            </li>
-            <li class="nav-item active">
-                <a href="http://localhost:9000/rules" class="nav-link">
-                    Rules
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
-@content
-<script src='@routes.Assets.versioned("javascripts/main.js")' type="text/javascript"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@@5.2.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <a href='#' class="navbar-brand mb-0 h1">
+            <img src='@routes.Assets.versioned("images/SkipBo.png")' class="d-inline-block align-top" width="100"
+                height="50" />
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a href="http://localhost:9000/" class="nav-link">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a href="http://localhost:9000/board" class="nav-link">
+                        Game
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a href="http://localhost:9000/rules" class="nav-link">
+                        Rules
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    @content
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@@5.2.2/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha384-i61gTtaoovXtAbKjo903+O55Jkn2+RtzHtvNez+yI49HAASvznhe9sZyjaSHTau9"
+        crossorigin="anonymous"></script>
+    <script src='@routes.Assets.versioned("javascripts/main.js")' type="text/javascript"></script>
 </body>
+
 </html>
