JSON objekt überarbeitet

--- a/app/views/Skip_Bo/board.scala.html
+++ b/app/views/Skip_Bo/board.scala.html
@@ -131,9 +131,8 @@
             <br><br>
             <div class="row">
                 <div class="boardgap col-2"></div>
-                <div class="ablageStapel col-8">
-                    <p>Ablagestapel: | @firstAblageStapel | | @secondAblageStapel | | @thirdAblageStapel | |
-                        @fourthAblageStapel |</p>
+                <div class="ablageStapel col-8" id="AblageStapelID">
+
                 </div>
                 <div class="boardgap col-2"></div>
             </div>
@@ -143,28 +142,6 @@
     <h2>Aktionen:</h2>
     <div class="gameButtonsDiv">
         <div class="row" id="input-panel-group">
-            <div class="col-xl-3">
-                <button class="gameButton" id="hand_Ablagestapel">Karte
-                    von Hand auf
-                    Ablagestapel
-                </button>
-            </div>
-            <div class="col-xl-3">
-                <button class="gameButton" id="hand_Hilfestapel">Karte
-                    von Hand auf
-                    Hilfsstapel
-                </button>
-            </div>
-            <div class="col-xl-3">
-                <button class="gameButton" id="hilfestapel_Ablagestapel">
-                    Karte von Hilfestapel auf Ablagestapel
-                </button>
-            </div>
-            <div class="col-xl-3">
-                <button class="gameButton" id="spielerstapel_Ablagestapel">
-                    Karte vom Spielerstapel auf Ablagestapel
-                </button>
-            </div>
         </div>
     </div>
     <div class="gameTextInputs">
