--- a/app/views/Skip_Bo/board.scala.html
+++ b/app/views/Skip_Bo/board.scala.html
@@ -58,57 +58,16 @@
             <br><br>
             <div class="row">
                 <div class="boardgap col-2"></div>
-                <div class="hand col-8">
-                    @if(controller.game.player.isEmpty){
-                    <p>Handkarten: | 0 | | 0 | | 0 | | 0 | | 0 |</p>
-                    } else {
-                    @if(handSize == 5){
-                    <p>Handkarten: | @firstHandCard | | @secondHandCard | | @thirdHandCard | | @fourthHandCard | |
-                        @fifthHandCard |</p>
-                    } else if(handSize == 4){
-                    <p>Handkarten: | @firstHandCard | | @secondHandCard | | @thirdHandCard | | @fourthHandCard |</p>
-                    } else if(handSize == 3){
-                    <p>Handkarten: | @firstHandCard | | @secondHandCard | | @thirdHandCard |</p>
-                    } else if(handSize == 2){
-                    <p>Handkarten: | @firstHandCard | | @secondHandCard |</p>
-                    } else if(handSize == 1){
-                    <p>Handkarten: | @firstHandCard |</p>
-                    }
-                    }
+                <div class="hand col-8" id="HandKartenID">
+
                 </div>
                 <div class="boardgap col-2"></div>
             </div>
             <br><br>
             <div class="row">
                 <div class="boardgap col-2"></div>
-                <div class="helpstacks col-8">
-                    @if(controller.game.player.isEmpty){
-                    <p>Hilfestapel: | leer | | leer | | leer | | leer |</p>
-                    } else {
-                    <p>Hilfestapel:</p>
-                    @if(firstHelpStackSize == 0){
-                    <p>| leer |</p>
-                    } else {
-                    <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(0).head.toString |</p>
-                    }
-                    @if(secondHelpStackSize == 0){
-                    <p>| leer |</p>
-                    } else {
-                    <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(1).head.toString |</p>
-                    }
-                    @if(thirdHelpStackSize == 0){
-                    <p>| leer |</p>
-                    } else {
-                    <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(2).head.toString |</p>
-                    }
-                    @if(fourthHelpStackSize == 0){
-                    <p>| leer |</p>
-                    } else {
-                    <p>| @controller.game.player(controller.playerState.getPlayer).helpstack(3).head.toString |</p>
-                    }
+                <div class="helpstacks col-8" id="helpStackID">
 
-
-                    }
                 </div>
                 <div class="boardgap col-2"></div>
             </div>
