Chat und Websockets grob hinzugefügt

--- a/app/views/Skip_Bo/board.scala.html
+++ b/app/views/Skip_Bo/board.scala.html
@@ -94,6 +94,10 @@
         <label for="whereCard">Wohin(Index 1 -> 5): </label>
         <input class="gameInput" type="text" id="whereCard">
     </div>
+    <button type="button" class="btn btn-dark hoverable" id="chatButton">
+        <i class="bi bi-chat-dots"></i>
+        Chat
+    </button>
 </div>
 }
 <script src="@routes.Assets.versioned(" javascripts/main.js")" type="text/javascript"></script>
