--- a/app/views/Skip_Bo/board.scala.html
+++ b/app/views/Skip_Bo/board.scala.html
@@ -36,57 +36,11 @@
 <header class="header">
     <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/board.css")' />
 
-    <div class="player">
-        <img class="playerIcon" id="playerIcon">
-        <br>
-        <label id="playerLabel"></label>
+    <div id="Skip_Bo_Game">
+        <gameBoard></gameBoard>
+        <Action-Components></Action-Components>
     </div>
-</header>
-<div class="gamecontainer">
-    <div class="gameState">
-        <div id="statusText">@statusText</div>
-    </div>
-    <div class="row">
-        <div class="col-3"></div>
-        <div class="board col-6">
-            <div class="row">
-                <div class="boardgap col-2"></div>
-                <div class="spielerStapel col-8" id="spielerStapel">
-                </div>
-                <div class="boardgap col-2"></div>
-            </div>
-            <br><br>
-            <div class="row">
-                <div class="boardgap col-2"></div>
-                <div class="hand col-8" id="HandKartenID">
 
-                </div>
-                <div class="boardgap col-2"></div>
-            </div>
-            <br><br>
-            <div class="row">
-                <div class="boardgap col-2"></div>
-                <div class="helpstacks col-8" id="helpStackID">
-
-                </div>
-                <div class="boardgap col-2"></div>
-            </div>
-            <br><br>
-            <div class="row">
-                <div class="boardgap col-2"></div>
-                <div class="ablageStapel col-8" id="AblageStapelID">
-
-                </div>
-                <div class="boardgap col-2"></div>
-            </div>
-        </div>
-        <div class="col-3"></div>
-    </div>
-    <h2>Aktionen:</h2>
-    <div class="gameButtonsDiv">
-        <div class="row" id="input-panel-group">
-        </div>
-    </div>
     <div class="gameTextInputs">
         <label for="whichCard">Welche Karte(Index 1 -> 5): </label>
         <input class="gameInput" type="text" id="whichCard">
@@ -94,6 +48,7 @@
         <label for="whereCard">Wohin(Index 1 -> 5): </label>
         <input class="gameInput" type="text" id="whereCard">
     </div>
-</div>
-}
-<script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
+    </div>
+    }
+    <script src="https://unpkg.com/vue@@next"></script>
+    <script src='@routes.Assets.versioned("javascripts/main.js")' type="text/javascript"></script>
