--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -56,7 +56,8 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha384-i61gTtaoovXtAbKjo903+O55Jkn2+RtzHtvNez+yI49HAASvznhe9sZyjaSHTau9"
         crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/vue@@next"></script>
+    <script src='@routes.Assets.versioned("javascripts/main.js")' type="text/javascript"></script>
 </body>
 
 </html>
